syntax = "proto3";

package cr8r.services;

message PWatchExperimentRequest {
    uint32 id = 1;
}